<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/tomarFotoBotonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TomarFoto" />

    <Button
        android:id="@+id/boton_llamada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/llamada" />

    <Button
        android:id="@+id/boton_mapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mapa_boton" />

    <Button
        android:id="@+id/boton_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accesar" />

    <Button
        android:id="@+id/boton_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_01" />

</LinearLayout>
